# qr_bench

./: Cargo.toml  README.md  example.py  install_deps.sh  main.py  produce_binary.sh
src/: error.rs  main.rs  progress.md  scan.rs
