[package]
name = "qrdetect_second_attempt"
version = "0.1.0"
authors = ["vlad <vladzhukovtirko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quirc = { git = "https://github.com/wg/quirc-rs.git" }
image  = "0.17.0"
qrcode = "0.5.0"
crossbeam = "0.7.3"
crossbeam-utils = "0.7.0"
clap = "2.33.0"
once_cell = "1.3.1"
env_logger = "0.7.1"
log = "0.4.8"